package ar.edu.utn.ba.ddsi.climalert.models.entities;

public record Clima(String ubicacion, Double latitud, Double longitud, Double temperatura, Double humidity) {
}